--- a/trunk/ProjetoFinal/OgmoLibrary/OgmoEditorLibrary.csproj
+++ b/trunk/ProjetoFinal/OgmoLibrary/OgmoEditorLibrary.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Grid.cs" />
+    <Compile Include="LevelEntity.cs" />
     <Compile Include="LevelReader.cs" />
     <Compile Include="TileMap.cs" />
     <Compile Include="Level.cs" />
