--- a/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/trunk/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Network\IGameMessage.cs" />
     <Compile Include="Network\Messages\UpdatePlayerStateMessages\UpdatePlayerMovementStateMessage.cs" />
     <Compile Include="Network\Interfaces\ServerInterface.cs" />
+    <Compile Include="PlayerStateMachine\PlayerStates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
