Commit grande tentando resolver a sync inicial de quem acaba de se conectar.

--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -127,7 +127,8 @@
     <Compile Include="Entities\Utils\Animation.cs" />
     <Compile Include="Entities\Utils\SpriteMap.cs" />
     <Compile Include="EventHeaders\ClientConnectedEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerRespawnedEventArgs.cs" />
+    <Compile Include="EventHeaders\NewClientPlayerCreatedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerSpawnedEventArgs.cs" />
     <Compile Include="EventHeaders\PlayerHitEventArgs.cs" />
     <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs\PlayerStateUpdatedWithArrowEventArgs.cs" />
     <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs\PlayerMovementStateUpdatedEventArgs.cs" />
@@ -168,7 +169,9 @@
     <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Managers\LocalPlayerManager.cs" />
     <Compile Include="Managers\NetworkManager.cs" />
-    <Compile Include="Network\Messages\PlayerRespawnedMessage.cs" />
+    <Compile Include="Network\Messages\NewClientPlayerCreatedMessage.cs" />
+    <Compile Include="Network\Messages\PlayerCreatedMessage.cs" />
+    <Compile Include="Network\Messages\PlayerSpawnedMessage.cs" />
     <Compile Include="Network\Messages\PlayerHitMessage.cs" />
     <Compile Include="Network\Messages\UpdatePlayerStateMessages\UpdatePlayerStateWithArrowMessage.cs" />
     <Compile Include="Network\Messages\UpdatePlayerStateMessage.cs" />
