Commit grande sincronizando a remoção dos players que foram disconectados.

--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -126,16 +126,17 @@
     <Compile Include="Entities\DynamicEntity.cs" />
     <Compile Include="Entities\Utils\Animation.cs" />
     <Compile Include="Entities\Utils\SpriteMap.cs" />
-    <Compile Include="EventHeaders\ClientConnectedEventArgs.cs" />
-    <Compile Include="EventHeaders\NewClientPlayerCreatedEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerSpawnedEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerHitEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs\PlayerStateUpdatedWithArrowEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs\PlayerMovementStateUpdatedEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerMovementStateChangedEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateChangedWithArrowEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerStateChangedEventArgs.cs" />
-    <Compile Include="EventHeaders\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\ClientConnectedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\NewClientPlayerCreatedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\PlayerSpawnedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\PlayerHitEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs\PlayerStateUpdatedWithArrowEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs\PlayerMovementStateUpdatedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\PlayerStateChangedEventArgs\PlayerMovementStateChangedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\PlayerStateChangedEventArgs\PlayerStateChangedWithArrowEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\PlayerStateChangedEventArgs.cs" />
+    <Compile Include="EventHeaders\PlayerIdEventArgs\PlayerStateChangedEventArgs\PlayerStateUpdatedEventArgs.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameDebugTools\DebugCommandUI.cs" />
     <Compile Include="GameDebugTools\DebugManager.cs" />
@@ -169,12 +170,14 @@
     <Compile Include="Managers\InputManager.cs" />
     <Compile Include="Managers\LocalPlayerManager.cs" />
     <Compile Include="Managers\NetworkManager.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessages\ClientDisconnectedMessage.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessage.cs" />
     <Compile Include="Network\Messages\NewClientPlayerCreatedMessage.cs" />
-    <Compile Include="Network\Messages\PlayerCreatedMessage.cs" />
-    <Compile Include="Network\Messages\PlayerSpawnedMessage.cs" />
-    <Compile Include="Network\Messages\PlayerHitMessage.cs" />
-    <Compile Include="Network\Messages\UpdatePlayerStateMessages\UpdatePlayerStateWithArrowMessage.cs" />
-    <Compile Include="Network\Messages\UpdatePlayerStateMessage.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessages\PlayerCreatedMessage.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessages\PlayerCreatedMessages\PlayerSpawnedMessage.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessages\PlayerHitMessage.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessages\UpdatePlayerStateMessages\UpdatePlayerStateWithArrowMessage.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessages\UpdatePlayerStateMessage.cs" />
     <Compile Include="PlayerStateMachine\ActionStates\ActionIdleState.cs" />
     <Compile Include="PlayerStateMachine\ActionStates\ActionState.cs" />
     <Compile Include="PlayerStateMachine\ActionStates\ShootingState.cs" />
@@ -198,9 +201,9 @@
     <Compile Include="Managers\TextureManager.cs" />
     <Compile Include="Network\Interfaces\ClientInterface.cs" />
     <Compile Include="Network\NetworkInterface.cs" />
-    <Compile Include="Network\Messages\HailMessage.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessages\HailMessage.cs" />
     <Compile Include="Network\IGameMessage.cs" />
-    <Compile Include="Network\Messages\UpdatePlayerStateMessages\UpdatePlayerMovementStateMessage.cs" />
+    <Compile Include="Network\Messages\PlayerIdMessages\UpdatePlayerStateMessages\UpdatePlayerMovementStateMessage.cs" />
     <Compile Include="Network\Interfaces\ServerInterface.cs" />
     <Compile Include="PlayerStateMachine\PlayerStates.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
